# Trade_Forecasting

./: .gitignore  README.md  generate_report_tables.py  pyproject.toml  requirements.txt  run_full_pipeline.py  run_full_pipeline_v2.py  run_full_pipeline_v3.py  test_pipeline.py
.devcontainer/: devcontainer.json
app/: streamlit_app.py  streamlit_app_cloud.py
data/raw/: final_dataset.csv  macro_data.csv  trade_data.csv  trade_partners.csv
outputs/metrics/: export_metrics.csv  import_metrics.csv
outputs/shap/: export_feature_importance.csv  import_feature_importance.csv
outputs/tables/: ablation_table.csv  best_model_summary.csv  chapter4_results_summary.csv  findings_for_presentation.txt  graph_features.csv  gravity_model_alignment.csv  model_comparison.csv  policy_uncertainty.csv  subperiod_analysis.csv
src/: ablation_study.py  data_loader.py  evaluate.py  explainability.py  feature_engineering.py  preprocess.py  trade_graph.py  train_arima.py  train_hybrid.py  train_lstm.py
