[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trade-forecasting"
version = "1.0.0"
description = "Zimbabwe Trade Forecasting System"
requires-python = ">=3.11,<3.12"
dependencies = [
    "streamlit>=1.32.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "scikit-learn>=1.3.0",
    "pmdarima>=2.0.0",
    "tensorflow-cpu>=2.15.0,<2.16.0",
    "plotly>=5.0.0",
    "matplotlib>=3.7.0",
    "joblib>=1.3.0",
    "statsmodels>=0.14.0",
]
